# DRIP-transmitter_nrf52840

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf52840dongle_nrf52840.overlay  xiao_ble.overlay
scripts/: build.bat  seeed.bat
src/: battery.cpp  gps2.cpp  gps2.h  local.cpp  main.c  main_nrf52.cpp  odid_bt.cpp  odid_bt.h  opendroneid.c  remote_id.h  remote_id.h.in
